data/all_generated_tests/raw_wast_tests/br_StackCorruption_215.wast
;; 6. Incorporate `br` instructions in a mixture of `block`, `loop`, and `if` constructs, with operands that manipulate the stack in specific ways (like pushing and popping values). Ensure the stack maintains expected values, detecting improper operand handling through inconsistent final stack states.

(assert_invalid
  (module
    (func
      (block (block 
        (loop 
          (i32.const 1)
          (br 1)
          (i32.const 2)
        )
        (br 1)
      ))
      (block (if (i32.eqz) 
        (then (br 0))
      ))
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)